feat: add kubernetes

--- a/manifest.yaml
+++ b/manifest.yaml
@@ -11,5 +11,8 @@ repos:
   # GitHub Action.
   - fedora
   - fedora-updates
+  - kubernetes
 
-include: manifests/fedora-coreos.yaml
+include:
+  - manifests/fedora-coreos.yaml
+  - manifests/kubernetes.yaml
